Fix styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
     max-height: calc(100vh - 2rem);
   }
 }
+
+@media screen and (max-width: 800px) {
+  .app {
+    flex-direction: column;
+  }
+}
